nbbbn
source_file.js:1

(function (exports, require, module, __filename, __dirname) { ㅇ-1-르겨롯:

                                                                     ^

SyntaxError: Unexpected token :

    at Object.exports.runInThisContext (vm.js:76:16)

    at Module._compile (module.js:542:28)

    at Object.Module._extensions..js (module.js:579:10)

    at Module.load (module.js:487:32)

    at tryModuleLoad (module.js:446:12)

    at Function.Module._load (module.js:438:3)

    at Module.runMain (module.js:604:10)

    at run (bootstrap_node.js:394:7)

    at startup (bootstrap_node.js:149:9)

    at bootstrap_node.js:509:3

